Tue Mar 25 23:32:25 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/pathname/lib/pathname.rb (Pathname#join): remove unnecessary
	  unshift.

	* test/pathname/test_pathname.rb (TestPathname#test_join): add tests.

Tue Mar 25 16:47:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_state_e, parser_params, f_arglist, parser_yylex):
	  separate EXPR_LABELARG from EXPR_BEG and let newline significant,
	  so that required keyword argument can place at the end of
	  argument list without parentheses.  [ruby-core:61658] [Bug #9669]

Mon Mar 24 22:19:56 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (ripper_initialize): filename can not be modified.

Mon Mar 24 15:19:47 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (rb_dump_backtrace_with_lines): fetch path of the
	  executable from /proc/self/exe on Linux.

Mon Mar 24 14:14:37 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: Fix up default GC params by @csfrancis [fix GH-556]

Mon Mar 24 13:13:36 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c (parse_debug_line_cu): explicitly specify signed char
	  because DWARF's line_Base is signed char and char maybe unsigned.
	  patched by Rei Odaira. [ruby-dev:48068] [Bug #9654]

Sun Mar 23 11:03:50 2014  Kohei Suzuki  <eagletmt@gmail.com>

	* vm_method.c (rb_method_entry_get_without_cache): me->klass is 0
	  for a method aliased in a module.  [ruby-core:61636] [Bug #9663]

Sun Mar 23 08:12:27 2014  Eric Wong  <e@80x24.org>

	* st.c (hash_pos): use bitwise AND to avoid slow modulo op
	  (new_size): power-of-two sizes for hash_pos change
	  (st_numhash): adjust for common keys due to lack of prime modulo
	  [Feature #9425]
	* hash.c (rb_any_hash): right shift for symbols
	* benchmark/bm_hash_aref_miss.rb: added to show improvement
	* benchmark/bm_hash_aref_sym_long.rb: ditto
	* benchmark/bm_hash_aref_str.rb: ditto
	* benchmark/bm_hash_aref_sym.rb: ditto
	* benchmark/bm_hash_ident_num.rb: added to prevent regression